--- a/app/src/components/common/Layout/Logo/Logo.module.scss
+++ b/app/src/components/common/Layout/Logo/Logo.module.scss
@@ -4,6 +4,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  color: white;
+  text-decoration: none;
 }
 
 .logo {
@@ -13,7 +15,7 @@
 .logo-title {
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   margin-left: 10px;
 }
 
@@ -21,5 +23,5 @@
   margin: 0;
   padding: 0;
   font-size: 0.9rem;
-  font-weight: normal;
+  font-weight: 100;
 }
